[package]
name = "nuklidkarte_visualiser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.18.1"
json = "0.12.4"
regex = "1.7.1"
open = "3.2.0"
# use nix 0.26 to overwrite unsafe older version used by nannou?
nix = "0.26.2"